//
// Protocol message for serialization of node contact information, so
// it can be exchanged between nodes.
//

package UniSphere.Protocol;

//
// Only type 'IP' address instances can be serialized, since tunnel
// information is exchanged differently
//
message Address {
  required string address = 1;
  required uint32 port = 2; 
};

//
// Contact message
//
message Contact {
  required bytes node_id = 1; 
  repeated Address addresses = 2;
};
